Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.4.0 RC
-
Fix Version/s: 5.4.0
-
Component/s: GUI: Look'n'Feel
-
Labels:None
-
Platform/s:
-
Commits:ab6d645850e88f3e351d196bf009135b6189ba8a
Description
We've recently started extracting the system palette in the Android platform plugin to get the correct colors in the Android style. This works well with Qt Quick Controls, but unfortunately, the widget styles do not play well with the extracted palette on Android 5. It seems that the palette we extract gets black as both the text color and the background color of many items, such as buttons and line edits, so it's unusable.
We need to find out why these colors are being reported. If it's correct, then we need to disable the system palette for the android widget style until the style is fixed. If it's not (if for instance it fails to get a text color and just defaults to black), then we need to pick a smarter default which contrasts against the background.
A work-around for this is to call QApplication::setStyle("fusion") before creating your QApplication. This will override the system palette on Android 5 and use the fusion style for widgets instead of the Android style.
Attachments
Issue Links
- replaces
-
QTBUG-43022 Qt5.4 RC Android QTableWidget headers and QGraphicView display black, item view examples no longer build
-
- Closed
-